--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "framer-motion": "^10.12.17",
+    "hamburger-react": "^2.5.0",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-parallax-tilt": "^1.7.164",
     "react-responsive-modal": "^6.4.2",
     "react-tilt": "^1.0.2",
     "tailwindcss": "3.3.2"
